--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,18 +3,102 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+ margin: 0;
 }
 
-#search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+
+
+.search-form {
+  background-color: #3d3dac;
+  box-shadow: 3px 2px 5px #212121;
+
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  min-height: 40px;
+  width: 100vw;
+}
+
+.form-wrapper{
+  position: relative;
+}
+.search-form__input{
+  border: none;
+  border-radius: 2px;
+  margin-right: 10px;
+  min-width: 200px;
+}
+
+.search-form__btn{
+  position: absolute;
+
+  top: 5px;
+  right: 10px;
+
+
+  background-color: rgb(239, 239, 239);
+  border: none;
+  border-radius: 2px;
+}
+
+.gallery{
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px 20px;
+  justify-content: center;
+}
+
+.photo-card{
+box-shadow: 1px 1px 5px #212121;
+}
+
+.info{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.info-item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+.info-item:not(:last-child) {
+margin-right: 15px;
+}
+
+
+.load-more{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #3d3dac;
+  padding: 10px;
+  color: #fafafa;
+  min-width: 150px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+
+
+  border: none;
+  border-radius: 4px;
+  
+  margin: 0 auto;
+}
+.hidden{
+visibility: hidden;
 }
